[package]
name = "glistix-wasm"
version = "0.6.0"
authors = ["PgBiel"]
edition = "2021"
license-file = "LICENCE"

[lib]
# This package compiles to wasm
crate-type = ["cdylib", "rlib"]

[dependencies]
glistix-core = { path = "../compiler-core" }
console_error_panic_hook = "0"
serde-wasm-bindgen = "0"
wasm-bindgen = { version = "0", features = ["serde-serialize"] }
tracing-wasm = "*"
camino.workspace = true
hexpm.workspace = true
im.workspace = true
itertools.workspace = true
serde.workspace = true
termcolor.workspace = true
tracing.workspace = true
getrandom.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
